code/tui/src/app/snapshots/app__mode_tests__inline_preview_ignores_other_mode_reply.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
                                                  
    ▄  ▄     Ash Code v0.1.0                      
  ▗█▛██▜█▖   Automatic model                      
  ▝▜████▛▘   .                                    
    ▝  ▘                                          
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
Loading conversation…                             
  Preview · first session · read only             
  Esc to close
