code/tui/src/app/snapshots/app__mode_tests__model_options_Fullscreen.snap
---
source: code/tui/src/app/mode_tests.rs
expression: output
---
"  .                                                                                                [— / —] [Dashboard]  "
"                                                                                                                        "
"               ┌── Model ───────────────────────────────────────────────────────────────────────────[✗]─┐               "
"               │                                                                                        │               "
"               │  ╭───────────────────────────────────────────────────────────────────────────────────╮ │               "
"               │  │ Search models                                                                     │ │               "
"               │  ╰───────────────────────────────────────────────────────────────────────────────────╯ │               "
"               │> GPT-6 Astra      ██ ██ ██   Medium  [Fast off]  [1m]                                  │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"  ─────────────│                                                                                        │─────────────  "
"  > preserved d│  ↑↓ select · Tab setting · ←→ adjust · / search · p pin · Enter apply · Esc cancel     │               "
"  ─────────────└────────────────────────────────────────────────────────────────────────────────────────┘omatic model   "
"                                                                                                                        "
"                                                                                                                        "
