code/tui/src/app/snapshots/app__mode_tests__model_options_Inline.snap
---
source: code/tui/src/app/mode_tests.rs
expression: output
---
"                                                                                                                        "
"    ▄  ▄     Ash Code v0.1.0                                                                                            "
"  ▗█▛██▜█▖   Automatic model                                                                                            "
"  ▝▜████▛▘   .                                                                                                          "
"    ▝  ▘                                                                                                                "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"─ Model ────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                                                        "
"  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  "
"  │ Search models                                                                                                    │  "
"  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  "
"> GPT-6 Astra    ← ██ ██ ██ → Medium                                                                  [Fast off]  [1m]  "
"                                                                                                                        "
"  ↑↓ select · ←→ adjust · f Fast · c context · / search · p pin · Enter apply · Esc cancel                              "
