code/tui/src/app/snapshots/app__mode_tests__model_search_Fullscreen.snap
---
source: code/tui/src/app/mode_tests.rs
expression: terminal.backend().to_string()
---
"  .                                                                                                [— / —] [Dashboard]  "
"                                                                                                                        "
"               ┌── Model ───────────────────────────────────────────────────────────────────────────[✗]─┐               "
"               │                                                                                        │               "
"               │  ╭───────────────────────────────────────────────────────────────────────────────────╮ │               "
"               │  │ astra                                                                             │ │               "
"               │  ╰───────────────────────────────────────────────────────────────────────────────────╯ │               "
"               │  GPT-6 Astra      ██ ██ ██   Medium  [Fast off]  [272k]                                │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"  ─────────────│                                                                                        │─────────────  "
"  > preserved d│  Enter/Esc/Ctrl+C to return                                                            │               "
"  ─────────────└────────────────────────────────────────────────────────────────────────────────────────┘omatic model   "
"                                                                                                                        "
"                                                                                                                        "
